# zx-webs

./: .gitignore  CLAUDE.md  CONTRIBUTING.md  Makefile  PROMPT.md  README.md  debug_mining.py  pyproject.toml
.github/: PULL_REQUEST_TEMPLATE.md
.github/workflows/: ci.yml
configs/: default.yaml  discovery_run.yaml  discovery_run2.yaml  discovery_v2.yaml  evolutionary_discovery.yaml  large_run.yaml  medium_run.yaml  qaoa_discovery.yaml  small_run.yaml  tiny_run.yaml
data_agent8/: exhaustive_k0.json  exhaustive_k0_k4.json  exhaustive_k1.json  exhaustive_k2.json  exhaustive_k3.json  exhaustive_k4.json
data_qaoa_discovery/: fitness_profile.json
data_qaoa_discovery/candidates/: byol_exploration_log.json  manifest.json
data_qaoa_discovery/corpus/: manifest.json
data_qaoa_discovery/filtered/: failures.json  (+1 more)
docs/: byol-explore-research.md  dicke42_paper.tex  dicke42_search.py  discovery.md  v1-baseline.md  v2-baseline.md  v3-baseline.md
motif_library/: catalog.json
notebooks/: 01_conversion_explorer.ipynb  02_motif_detection.ipynb  02_motif_phylogeny.ipynb  03_algorithm_discovery.ipynb  03_box_library.ipynb  04_irr_pair11_evaluation.ipynb  04_novel_compositions.ipynb
paper/: draft.md
scripts/: README.md  agent8_fast_dicke.py  benchmark_maxv.py  benchmark_mining_scaling.py  benchmark_zxea.py  compare_algorithms.py  diagnose_extraction.py  discover_phylogeny.py  experiment_deep_diagnosis.py  experiment_extraction.py  experiment_final_approaches.py  run_byol_explore.py  run_pipeline.py  run_stage.py  verify_vqe_result.py  visualize_irr_pair11.py
tests/: conftest.py  test_approximate_matching.py  test_cross_level.py  test_decomposer.py  test_featurizer.py  test_fitness_tracker.py  test_inducer.py  test_integration.py  test_motif_discovery.py  test_optimizer.py  test_parametric_matching.py  test_phase_optimizer.py  test_registry.py  test_stage1_corpus.py  test_stage2_zx.py  test_stage3_mining.py  test_stage4_compose.py  test_stage5_filter.py  test_stage6_bench.py  test_stage7_report.py  test_wl_hashing.py
(+253 files in other folders)
