[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "zx-webs"
version = "0.1.0"
description = "Quantum algorithm discovery via ZX-diagram pattern mining and recombination"
requires-python = ">=3.10"
dependencies = [
    "qiskit>=1.0",
    "pyzx>=0.8.0",
    "gspan-mining>=0.2.1",
    "networkx>=3.0",
    "pydantic>=2.0",
    "pyyaml>=6.0",
    "numpy>=1.24",
    "pandas>=2.0",
    "matplotlib>=3.7",
    "tqdm>=4.60",
    "orjson>=3.9",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.0",
    "pytest-timeout>=2.0",
    "ruff>=0.1.0",
    "mypy>=1.0",
    "ipykernel>=6.0",
]
gpu = [
    "cupy-cuda12x",
]
bench = [
    "qiskit-aer>=0.13",
    "supermarq",
]
qpu = [
    "qiskit-ibm-runtime",
    "qiskit-braket-provider",
    "qiskit-addon-cutting",
]

[project.scripts]
zx-webs = "zx_webs.pipeline:main"

[tool.hatch.build.targets.wheel]
packages = ["src/zx_webs"]

[tool.pytest.ini_options]
testpaths = ["tests"]
timeout = 60

[tool.ruff]
target-version = "py310"
line-length = 100
src = ["src"]

[tool.ruff.lint]
select = ["E", "F", "I", "N", "W"]

[tool.mypy]
python_version = "3.10"
warn_return_any = true
warn_unused_configs = true
